backend/vulnerability_analysis/testing/npr1/segments/klee-out-0/test000060.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strlen.c
Line: 22
assembly.ll line: 9465
State: 1
Stack: 
	#000009465 in strlen(138799673769984) at libc/string/strlen.c:22
	#100007821 in create_task(138799673769984, symbolic) at testing/null_ptr/segments/segment_1_klee.c:15
	#200007993 in __klee_posix_wrapped_main() at testing/null_ptr/segments/segment_1_klee.c:30
	#300006076 in __user_main(1, 140002801483776, 140002801483792) at src/runtime/POSIX/klee_init_env.c:245
	#400000530 in __uClibc_main(139987022512128, 1, 140002801483776, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000695 in main(1, 140002801483776)
Info: 
	address: 138799673770084
	next: object at 138757260967936 of size 4
		MO7621[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
